# projet-the-north-face-bloc3

./: README.md  main.py  pyproject.toml  requirements.txt
notebooks/: 01_eda_preprocessing.ipynb  02_models_training.ipynb
outputs/data/: cleaned_data.csv
outputs/models/: tfidf_artifacts.pkl
